# combinelibs

./: CMakeLists.txt  README.md
include/: product.h
mylib/: myheader.h  myimpl.cpp
product/: a.out  test.cpp
src/: solution.cpp
